Finally fixed the gross font!!!
It doesn't look terrible anymore!!!

--- a/assets/css/browser.css
+++ b/assets/css/browser.css
@@ -78,11 +78,22 @@ img, .noSelect {
 
 .smaller {
     font-size: 5vh;
-    text-shadow: -0.2vh -0.2vh 0vh #000, 0.2vh -0.2vh 0vh #000, -0.2vh 0.2vh 0vh #000, 0.2vh 0.2vh 0vh #000, 0.3vh 0.4vh 0vh rgba(0,0,0,0.4);
+    -webkit-text-stroke-width: 0.20vh;
+    -webkit-text-stroke-color: black;
+    text-shadow: 0.35vh 0.35vh 0vh rgba(0, 0, 0, 0.3);
 }
 
 .slightlySmaller {
     font-size: 6vh;
+    -webkit-text-stroke-width: 0.25vh;
+    -webkit-text-stroke-color: black;
+    text-shadow: 0.35vh 0.35vh 0vh rgba(0, 0, 0, 0.3);
+}
+
+.biggerShadow {
+    -webkit-text-stroke-width: 0.3vh;
+    -webkit-text-stroke-color: black;
+    text-shadow: 0.5vh 0.5vh 0vh rgba(0, 0, 0, 0.3);
 }
 
 .bigger {
@@ -154,43 +165,47 @@ p {
     word-break: break-word;
 }
 
-h1 {
+h1, h2, h3 {
+    font-family: Pusab, Arial;
     font-weight: normal;
     margin: 0% 0%;
-    font-size: 6vh;
-    font-family: Pusab, Arial;
+    letter-spacing: -0.01em;
+    -webkit-text-size-adjust: 100%;
+}
+
+h1 {
     color: white;
-    letter-spacing: 0.02em;
+    font-size: 6vh;
+    line-height: 100%;
     overflow: hidden;
     white-space: nowrap;
-    text-shadow: -0.275vh -0.275vh 0vh #000, 0.275vh -0.275vh 0vh #000, -0.275vh 0.275vh 0vh #000, 0.275vh 0.275vh 0vh #000, 0.5vh 0.6vh 0vh rgba(0,0,0,0.4);
-    -webkit-text-size-adjust: 100%;
-    line-height: 100%;
+    -webkit-text-stroke-width: 0.25vh;
+    -webkit-text-stroke-color: black;
+    text-shadow: 0.375vh 0.375vh 0vh rgba(0, 0, 0, 0.3);
 }
 
 h2 {
-    font-weight: normal;
-    margin: 0 0;
-    font-size: 8vh;
-    font-family: Pusab, Arial;
     color: rgb(255, 200, 0);
-    letter-spacing: 0.02em;
-    text-shadow: -0.275vh -0.275vh 0vh #000, 0.275vh -0.275vh 0vh #000, -0.275vh 0.275vh 0vh #000, 0.275vh 0.275vh 0vh #000, 0.5vh 0.5vh 0vh rgba(0,0,0,0.4);
+    font-size: 8vh;
+    -webkit-text-stroke-width: 0.265vh;
+    -webkit-text-stroke-color: black;
+    text-shadow: 0.35vh 0.35vh 0.1vh rgba(0, 0, 0, 0.3);
 }
 
 h3, input[type=text], input[type=password], input[type=number], .h3Size {
-    font-weight: normal;
-    margin: 0 0;
     font-size: 3.5vh;
-    font-family: Pusab, Arial;
     color: white;
-    letter-spacing: 0.02em;
-    text-shadow: -0.15vh -0.15vh 0vh #000, 0.15vh -0.15vh 0vh #000, -0.15vh 0.15vh 0vh #000, 0.15vh 0.15vh 0vh #000;
+    -webkit-text-stroke-width: 0.14vh;
+    -webkit-text-stroke-color: black;
+    text-shadow: 0.2vh 0.2vh 0.02vh rgba(0, 0, 0, 0.3);
 }
 
 a {
     text-decoration: none;
     color: inherit;
+    -webkit-text-stroke-width: inherit;
+    -webkit-text-stroke-color: inherit;
+    text-shadow: inherit;
 }
 
 hr {
@@ -207,6 +222,7 @@ input[type=text], input[type=password], input[type=number] {
     margin-top: 1%;
     width: 65%;
     font-size: 5vh;
+    font-family: Pusab, Arial;
 }
 
 input[type=checkbox], .changeDaWorld {
@@ -443,8 +459,9 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
 
 #filterStuff div h1, .smallerer {
     font-size: 4vh;
-    text-shadow: -0.2vh -0.2vh 0vh #000, 0.2vh -0.2vh 0vh #000, -0.2vh 0.2vh 0vh #000, 0.2vh 0.2vh 0vh #000, 0.3vh 0.4vh 0vh rgba(0,0,0,0.4);
-}
+    -webkit-text-stroke-width: 0.18vh;
+    -webkit-text-stroke-color: black;
+    text-shadow: 0.3vh 0.3vh 0vh rgba(0, 0, 0, 0.3);}
 
 .sideButton {
     margin-bottom: 30%;
@@ -665,7 +682,6 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     text-align: left;
     padding-top: 1.5vh;
     padding-left: 1.5vh;
-    overflow: hidden;
 }
 
 .compact {
@@ -679,8 +695,9 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     width: fit-content;
     vertical-align: top;
     font-size: 3.7vh;
-    text-shadow: -0.15vh -0.15vh 0vh #000, 0.15vh -0.15vh 0vh #000, -0.15vh 0.15vh 0vh #000, 0.15vh 0.15vh 0vh #000, 0.3vh 0.3vh 0vh rgba(0,0,0,0.4);
-}
+    -webkit-text-stroke-width: 0.14vh;
+    -webkit-text-stroke-color: black;
+    text-shadow: 0.2vh 0.2vh 0.02vh rgba(0, 0, 0, 0.3);}
 
 .commentText {
     margin-top: 1.6vh;
